WEB-619 Double scroll appears | Games page | If user refreshes the page & scrolls downwards (bug fixed)

--- a/src/app/layouts/admin-layout/admin-layout.component.scss
+++ b/src/app/layouts/admin-layout/admin-layout.component.scss
@@ -6,7 +6,7 @@
 }
 
 .height130 {
-    height: 103px;
+    height: 80px;
     @media (max-width: 1200px) {
         height: 68px;
     }
